--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,11 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+h2 {
+    font-size: 2em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #333;
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
