--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,9 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+div#avatar {
+  border-radius: 5px;
+  float:         right;
+  height:        80px;
+  width:         80px;
+}
