--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="icon" href="http://www.gravatar.com/avatar/a0cc4d1c55ee3ae48437c4e7774355b7?s=32" type="image/png" />
+
 		</head>
 		<body>
 			<nav>
