--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+li {
+    font-size: 1.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: #333;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
