--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ li {
     font-size: 1.4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: #333;
+    font-weight: bold;
+
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
